# mytest

./: CMakeLists.txt  Doxyfile  README.md
docs/: index.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/mytest/: CMakeLists.txt  exception.hpp  program.cpp  program.hpp  program_args.hpp
tests/: CMakeLists.txt
tests/mytest_gtest/: CMakeLists.txt  main.cpp  program_test.cpp
